feat: Implement Astro Image component for optimized asset delivery, add new i18n language content, and refine UI elements.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -597,6 +597,11 @@
       }
     }
   },
+  "languages": {
+    "title": "We speak your language",
+    "subtitle": "Global from day one",
+    "description": "VitalsPath is natively translated into 15 languages so your entire family feels at home."
+  },
   "footerStats": {
     "activeUsers": "Active Users",
     "regions": "Regions",
