feat: Redesign pricing section with detailed feature comparison, updated UI, and new icons, alongside general content and layout adjustments across the landing page.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -541,7 +541,7 @@
       "quiet_schedule": "Quiet Schedule",
       "stock_inventory": "Stock & Inventory",
       "export_pdf_csv": "Export to PDF/CSV",
-      "advanced_analytics": "Advanced Analytics",
+      "advanced_analytics": "Advanced Analytics (30, 90 days, All time)",
       "health_reports": "Health Reports",
       "ocr_scanner": "Medication OCR Scanner",
       "healthkit": "HealthKit Integration",
@@ -551,9 +551,20 @@
       "advanced_notifications": "Advanced Notifications",
       "haptic_feedback": "Haptic Feedback",
       "widget_styles": "Widget Styles",
-      "basic_profiles": "2 Profiles",
-      "basic_medications": "Basic Medications",
-      "local_reminders": "Local Reminders"
+      "basic_profiles": "1 Profile (Unlimited in Premium)",
+      "basic_medications": "3 Medications per profile",
+      "local_reminders": "Basic Reminders",
+      "wellness_score": "Wellness Score (Daily rings)",
+      "wellness_details": "Advanced factors breakdown",
+      "smart_scheduler": "Conflict Checker (Manual fix)",
+      "smart_scheduler_ia": "AI Automatic Optimization",
+      "appointments_limit": "3 Appointments per month",
+      "unlimited_appointments": "Unlimited Appointments",
+      "locations_limit": "2 Favorite Places",
+      "insurance_limit": "1 Health Insurance",
+      "symptoms_basic": "Basic Symptoms",
+      "symptoms_complex": "Complex Symptoms (Chest, Abdominal, Anxiety)",
+      "inventory_basic": "Basic Stock & Expiration"
     },
     "cta": "Coming Soon",
     "cta_alt": "Sign me up"
