--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -541,7 +541,7 @@
       "quiet_schedule": "Horario Silencioso",
       "stock_inventory": "Stock e Inventario",
       "export_pdf_csv": "Exportar a PDF/CSV",
-      "advanced_analytics": "Analíticas Avanzadas",
+      "advanced_analytics": "Analíticas Avanzadas (30, 90 días, Histórico)",
       "health_reports": "Informes de Salud",
       "ocr_scanner": "Escáner OCR de Medicamentos",
       "healthkit": "Integración HealthKit",
@@ -551,9 +551,20 @@
       "advanced_notifications": "Notificaciones Avanzadas",
       "haptic_feedback": "Respuesta Háptica",
       "widget_styles": "Estilos de Widgets",
-      "basic_profiles": "2 Perfiles",
-      "basic_medications": "Medicamentos Básicos",
-      "local_reminders": "Recordatorios Locales"
+      "basic_profiles": "1 Perfil (Ilimitados en Premium)",
+      "basic_medications": "3 Medicamentos por perfil",
+      "local_reminders": "Recordatorios Básicos",
+      "wellness_score": "Wellness Score (Anillos diarios)",
+      "wellness_details": "Desglose avanzado de factores",
+      "smart_scheduler": "Conflict Checker (Corrección manual)",
+      "smart_scheduler_ia": "Optimización Automática con IA",
+      "appointments_limit": "3 Citas por mes",
+      "unlimited_appointments": "Citas Ilimitadas",
+      "locations_limit": "2 Lugares Favoritos",
+      "insurance_limit": "1 Seguro de Salud",
+      "symptoms_basic": "Síntomas Básicos",
+      "symptoms_complex": "Síntomas Complejos (Pecho, Abdominal, Ansiedad)",
+      "inventory_basic": "Stock e Inventario Básico"
     },
     "cta": "Próximamente",
     "cta_alt": "Apúntame"
